# ipp-sys

./: Cargo.toml  README.md  README.tpl
ipp-headers-sys/src/: ippcp_2019.rs  lib.rs
ipp-sys/: Cargo.toml
ipp-sys-build-help/src/: lib.rs
ipp-sys/src/: lib.rs
link-ippcp/: Cargo.toml  README.md  build.rs
link-ippcv/: Cargo.toml
link-ippcv/src/: lib.rs
link-ippdc/: Cargo.toml  README.md  build.rs
link-ippdc/src/: lib.rs
link-ippvm/: Cargo.toml  README.md
