[package]
name = "link-ippdc"
description = "link ippdc library (part of ipp-sys Intel IPP bindings)"
version = "0.1.2"
authors = ["Dan Julius <dan.julius@gmail.com>"]
build = "build.rs"
links = "libippdc"
repository = "https://github.com/danj/ipp-sys"
license = "MIT/Apache-2.0"
categories = ["external-ffi-bindings"]
readme = "README.md"

[dependencies]
link-ippcore = { version = "0.1", path = "../link-ippcore" }
link-ipps = { version = "0.1", path = "../link-ipps" }

[build-dependencies]
ipp-sys-build-help = { version = "0.1.2", path = "../ipp-sys-build-help" }
